peac_dev/force-app/main/default/objects/Payment__c/Payment__c.object-meta.xml
<CustomObject>
    <description>Payments to a Payee related to an opportunity</description>
    <label>Payment</label>
    <nameField>
        <displayFormat>PYMT-{0}</displayFormat>
        <label>Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>