peac_dev/force-app/main/default/objects/Payment__c/fields/Application_Number__c.field-meta.xml
<CustomField>
    <fullName>Application_Number__c</fullName>
    <formula>Opportunity__r.Application__c</formula>
    <label>Application #</label>
    <type>Text</type>
</CustomField>