peac_dev/force-app/main/default/objects/Payment__c/fields/Date_Sent_to_External_System__c.field-meta.xml
<CustomField>
    <fullName>Date_Sent_to_External_System__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Sent to External System</label>
    <type>DateTime</type>
</CustomField>