peac_dev/force-app/main/default/objects/Payment__c/fields/Disbursement_Amount__c.field-meta.xml
<CustomField>
    <fullName>Disbursement_Amount__c</fullName>
    <formula>Loan_Amount__c +  Plus_Commission__c -  Less_Origination_Fee__c - Less_Payoffs_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Loan Amount + Commission - Payoffs - Orig Fee</inlineHelpText>
    <label>Disbursement Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>