peac_dev/force-app/main/default/objects/Payment__c/fields/Email_for_Void_Email__c.field-meta.xml
<CustomField>
    <fullName>Email_for_Void_Email__c</fullName>
    <defaultValue>&quot;bookingsheets@marlinleasing.com&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Email for Void Email</label>
    <type>Email</type>
</CustomField>