peac_dev/force-app/main/default/objects/Payment__c/fields/External_Payment_Batch__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_Batch__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External Batch Number of Payment in A/P system</inlineHelpText>
    <label>External Payment Batch</label>
    <length>10</length>
    <type>Text</type>
</CustomField>