peac_dev/force-app/main/default/objects/Payment__c/fields/External_Payment_ID__c.field-meta.xml
<CustomField>
    <fullName>External_Payment_ID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <inlineHelpText>External ID of Payment in A/P system</inlineHelpText>
    <label>External Payment ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>