peac_dev/force-app/main/default/objects/Payment__c/fields/Invoice_Less_Funding_Amount__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Less_Funding_Amount__c</fullName>
    <formula>Opportunity__r.Equipment_Cost_w_o_Tax__c -  Less_Payoffs_Total__c -  Net_Funded_Fees_Contract__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Less Funding Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>