peac_dev/force-app/main/default/objects/Payment__c/fields/Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Number__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>