peac_dev/force-app/main/default/objects/Payment__c/fields/Is_Payment_Released_or_Acknowledged__c.field-meta.xml
<CustomField>
    <fullName>Is_Payment_Released_or_Acknowledged__c</fullName>
    <formula>IF(
   TEXT(Payment_Status__c) = &quot;Payment Released&quot;
   ||
   TEXT(Payment_Status__c) = &quot;Payment Acknowledged&quot;
   ||
   TEXT(Payment_Status__c) = &quot;Payment Confirmed&quot;,
   true,
   false
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Payment Released or Acknowledged</label>
    <type>Checkbox</type>
</CustomField>