peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Advance_Funding__c.field-meta.xml
<CustomField>
    <fullName>Less_Advance_Funding__c</fullName>
    <label>Less Advance Funding</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>