peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Delivery_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Less_Delivery_Guarantee__c</fullName>
    <label>Less Delivery Guarantee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>