peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Discount__c.field-meta.xml
<CustomField>
    <fullName>Less_Discount__c</fullName>
    <label>Less Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>