peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Doc_Fee_Amount__c.field-meta.xml
<CustomField>
    <fullName>Less_Doc_Fee_Amount__c</fullName>
    <label>Less Doc Fee Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>