peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Fee_for_Existing_Account__c.field-meta.xml
<CustomField>
    <fullName>Less_Fee_for_Existing_Account__c</fullName>
    <label>Less Fee for Existing Account</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>