peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Payoffs_Total__c.field-meta.xml
<CustomField>
    <fullName>Less_Payoffs_Total__c</fullName>
    <inlineHelpText>Total from related Payoffs</inlineHelpText>
    <label>Less Payoffs Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>