peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Points__c.field-meta.xml
<CustomField>
    <fullName>Less_Points__c</fullName>
    <label>Less Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>