peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Security_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Less_Security_Deposit__c</fullName>
    <label>Less Security Deposit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>