peac_dev/force-app/main/default/objects/Payment__c/fields/Less_Titling_Fee__c.field-meta.xml
<CustomField>
    <fullName>Less_Titling_Fee__c</fullName>
    <label>Less Titling Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>