peac_dev/force-app/main/default/objects/Payment__c/fields/Less_UPS_Charge__c.field-meta.xml
<CustomField>
    <fullName>Less_UPS_Charge__c</fullName>
    <label>Less UPS Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>