peac_dev/force-app/main/default/objects/Payment__c/fields/Net_Yield_to_EU__c.field-meta.xml
<CustomField>
    <fullName>Net_Yield_to_EU__c</fullName>
    <label>Net Yield to EU</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>