peac_dev/force-app/main/default/objects/Payment__c/fields/Overnight__c.field-meta.xml
<CustomField>
    <fullName>Overnight__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box for overnight requests. This is only available for Check Payment Method.</inlineHelpText>
    <label>Overnight</label>
    <type>Checkbox</type>
</CustomField>