peac_dev/force-app/main/default/objects/Payment__c/fields/Payee__c.field-meta.xml
<CustomField>
    <fullName>Payee__c</fullName>
    <inlineHelpText>Payee related to this payment</inlineHelpText>
    <label>Payee</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND 3</booleanFilter>
        <errorMessage>Value does not exist or does not match filter criteria or the Payee in Inactive</errorMessage>
        <filterItems>
            <field>Payee__c.SL_Vendor_ID__c</field>
            <operation>notEqual</operation>
            <value></value>
        </filterItems>
        <filterItems>
            <field>Payee__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Payee__c.Payee_Name__c</field>
            <operation>notContain</operation>
            <value>Do Not</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payee__c</referenceTo>
    <relationshipLabel>Payments</relationshipLabel>
    <relationshipName>Payments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>