peac_dev/force-app/main/default/objects/Payment__c/fields/Payee_External_ID__c.field-meta.xml
<CustomField>
    <fullName>Payee_External_ID__c</fullName>
    <formula>Payee__r.SL_Vendor_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payee External ID</label>
    <type>Text</type>
</CustomField>