peac_dev/force-app/main/default/objects/Payment__c/fields/Payment_Released_Date__c.field-meta.xml
<CustomField>
    <fullName>Payment_Released_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Date payment was released in external system</inlineHelpText>
    <label>Payment Released Date</label>
    <type>DateTime</type>
</CustomField>