peac_dev/force-app/main/default/objects/Payment__c/fields/Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>Payment_Status__c</fullName>
    <label>Payment Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>Draft</label>
            </value>
            <value>
                <fullName>Ready to Send</fullName>
            </value>
            <value>
                <fullName>Payment Sent</fullName>
            </value>
            <value>
                <fullName>Payment Confirmed</fullName>
                <label>Payment Acknowledged</label>
            </value>
            <value>
                <fullName>Payment Released</fullName>
            </value>
            <value>
                <fullName>Void/Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>