peac_dev/force-app/main/default/objects/Payment__c/fields/Payment_Total__c.field-meta.xml
<CustomField>
    <fullName>Payment_Total__c</fullName>
    <label>Payment Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>