peac_dev/force-app/main/default/objects/Payment__c/fields/Plus_Commission__c.field-meta.xml
<CustomField>
    <fullName>Plus_Commission__c</fullName>
    <label>Plus Commission</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>