peac_dev/force-app/main/default/objects/Payment__c/fields/Plus_Points__c.field-meta.xml
<CustomField>
    <fullName>Plus_Points__c</fullName>
    <label>Plus Points</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>