peac_dev/force-app/main/default/objects/Payment__c/fields/Plus_Subsidy__c.field-meta.xml
<CustomField>
    <fullName>Plus_Subsidy__c</fullName>
    <label>Plus Subsidy</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>