peac_dev/force-app/main/default/objects/Payment__c/fields/Plus_Upfront_Tax_to_Third_Party__c.field-meta.xml
<CustomField>
    <fullName>Plus_Upfront_Tax_to_Third_Party__c</fullName>
    <label>Plus Upfront Tax to Third Party</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>