peac_dev/force-app/main/default/objects/Payment__c/fields/Subsidy_Information__c.field-meta.xml
<CustomField>
    <fullName>Subsidy_Information__c</fullName>
    <label>Subsidy Information</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Advance Auto Parts, 1824309</fullName>
            </value>
            <value>
                <fullName>Autodesk 1, 1357848</fullName>
            </value>
            <value>
                <fullName>AutoPlus, 1751979</fullName>
            </value>
            <value>
                <fullName>Biospace, 1634899</fullName>
            </value>
            <value>
                <fullName>Biospace dba InBody, 1634899</fullName>
            </value>
            <value>
                <fullName>Convergent Dental, 1635804</fullName>
            </value>
            <value>
                <fullName>Corghi USA, 1878939</fullName>
            </value>
            <value>
                <fullName>Glidewell Dental, 1651965</fullName>
            </value>
            <value>
                <fullName>HD Hyundai Construction Equipment, 1885889</fullName>
            </value>
            <value>
                <fullName>HD Hyundai Material Handling, 1885888</fullName>
            </value>
            <value>
                <fullName>Linder Machinery Company, 904786.6710</fullName>
            </value>
            <value>
                <fullName>LiuGong NA,  281579.8882</fullName>
            </value>
            <value>
                <fullName>Panasonic -BTS, 1396515</fullName>
            </value>
            <value>
                <fullName>Panasonic - Projector, 1396515</fullName>
            </value>
            <value>
                <fullName>Panasonic ProVideo, 1396515</fullName>
            </value>
            <value>
                <fullName>Snap On - Car-O-Liner, 4157870</fullName>
            </value>
            <value>
                <fullName>Snap On - Hoffmann, 1452626</fullName>
            </value>
            <value>
                <fullName>Snap-on – John Bean, 1643016</fullName>
            </value>
            <value>
                <fullName>Straumann USA, 1651964</fullName>
            </value>
            <value>
                <fullName>Wellbilt, 1331054</fullName>
            </value>
            <value>
                <fullName>1 - Scotsman</fullName>
                <isActive>false</isActive>
                <label>1 - Scotsman</label>
            </value>
            <value>
                <fullName>10 - ICE</fullName>
                <isActive>false</isActive>
                <label>10 - ICE</label>
            </value>
            <value>
                <fullName>11 - Zultys</fullName>
                <isActive>false</isActive>
                <label>11 - Zultys</label>
            </value>
            <value>
                <fullName>12 - Jackson</fullName>
                <isActive>false</isActive>
                <label>12 - Jackson</label>
            </value>
            <value>
                <fullName>13 - Panasonic</fullName>
                <isActive>false</isActive>
                <label>13 - Panasonic</label>
            </value>
            <value>
                <fullName>14 - Christie Digital Systems</fullName>
                <isActive>false</isActive>
                <label>14 - Christie Digital Systems</label>
            </value>
            <value>
                <fullName>15 - Profoto</fullName>
                <isActive>false</isActive>
                <label>15 - Profoto</label>
            </value>
            <value>
                <fullName>16 - Hasselblad Bron, Inc</fullName>
                <isActive>false</isActive>
                <label>16 - Hasselblad Bron, Inc</label>
            </value>
            <value>
                <fullName>17 - Eiki</fullName>
                <isActive>false</isActive>
                <label>17 - Eiki</label>
            </value>
            <value>
                <fullName>18 - PW Stoelting</fullName>
                <isActive>false</isActive>
                <label>18 - PW Stoelting</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>