peac_dev/force-app/main/default/objects/Payment__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>IF(
   CONTAINS(RecordType.DeveloperName,&quot;Loan&quot;),
    Disbursement_Amount__c,
     Total_Amount__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>