peac_dev/force-app/main/default/objects/Payment__c/fields/Total_Due_from_Payee__c.field-meta.xml
<CustomField>
    <fullName>Total_Due_from_Payee__c</fullName>
    <formula>IF(
   IF(CONTAINS(RecordType.Name,&quot;Loan&quot;),Disbursement_Amount__c,Total_Amount__c) &lt; 0,
   IF(CONTAINS(RecordType.Name,&quot;Loan&quot;),Disbursement_Amount__c,Total_Amount__c) * -1,
   null
)</formula>
    <label>Total Due from Payee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>