peac_dev/force-app/main/default/objects/Payment__c/recordTypes/Lease_Payment.recordType-meta.xml
<RecordType>
    <fullName>Lease_Payment</fullName>
    <active>true</active>
    <description>Payment for a Lease</description>
    <label>Lease Payment</label>
</RecordType>