peac_dev/force-app/main/default/objects/Payment__c/recordTypes/Loan_Payment.recordType-meta.xml
<RecordType>
    <fullName>Loan_Payment</fullName>
    <active>true</active>
    <description>Payment for a Loan</description>
    <label>Loan Payment</label>
</RecordType>