peac_dev/force-app/main/default/objects/Payment__c/validationRules/Amount_Required_for_ready_to_send.validationRule-meta.xml
<ValidationRule>
    <fullName>Amount_Required_for_ready_to_send</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
   OR(
      ISBLANK( Loan_Amount__c ),
      Loan_Amount__c = 0
   ),
   RecordType.Name = &quot;Loan Payment&quot;, 
   TEXT( Payment_Status__c ) = &quot;Ready to Send&quot;,
   ISCHANGED(Payment_Status__c)
 )</errorConditionFormula>
    <errorMessage>Loan Amount is required to move to Ready to Send on a Loan Payment.</errorMessage>
</ValidationRule>