peac_dev/force-app/main/default/objects/Payment__c/validationRules/Method_Required_for_ready_to_send.validationRule-meta.xml
<ValidationRule>
    <fullName>Method_Required_for_ready_to_send</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   ISBLANK(TEXT(Payment_Method__c)),
   TEXT( Payment_Status__c ) = &quot;Ready to Send&quot;,
   ISCHANGED(Payment_Status__c)
 )</errorConditionFormula>
    <errorMessage>Payment Method is required to move to Ready to Send.</errorMessage>
</ValidationRule>