peac_dev/force-app/main/default/objects/Payment__c/validationRules/Opportunity_Closed.validationRule-meta.xml
<ValidationRule>
    <fullName>Opportunity_Closed</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   !ISBLANK(Opportunity__c),
   Opportunity__r.IsClosed,
   !$Setup.ORE__c.Bypass__c
)</errorConditionFormula>
    <errorMessage>Payments may not be edited when the related opportunity is in a closed stage.</errorMessage>
</ValidationRule>