peac_dev/force-app/main/default/objects/Payment__c/validationRules/Subsidy_should_have_Subsidy_Information.validationRule-meta.xml
<ValidationRule>
    <fullName>Subsidy_should_have_Subsidy_Information</fullName>
    <active>true</active>
    <description>AND(ISBLANK(TEXT(Subsidy_Information__c)) ,
Plus_Subsidy__c  &gt; 0)</description>
    <errorConditionFormula>AND(
$Setup.ORE__c.Bypass__c =False,
ISBLANK(TEXT(Subsidy_Information__c)) ,
Plus_Subsidy__c  &gt; 0
)</errorConditionFormula>
    <errorMessage>Subsidy Information is Required.</errorMessage>
</ValidationRule>