peac_dev/force-app/main/default/objects/Payment__c/validationRules/TC_Payment_Status_not_possible.validationRule-meta.xml
<ValidationRule>
    <fullName>TC_Payment_Status_not_possible</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
   $Profile.Name != &quot;System Administrator&quot;,
   $User.LastName != &quot;Informatica&quot;,
   OR(
      TEXT(Payment_Status__c) = &quot;Payment Acknowledged&quot;,
      TEXT(Payment_Status__c) = &quot;Payment Released&quot;,
      TEXT(Payment_Status__c) = &quot;Payment Confirmed&quot;
   )
)</errorConditionFormula>
    <errorMessage>To change the status to Payment Released or Payment Acknowledged you must have system admin access. Please contact your administrator.</errorMessage>
</ValidationRule>