peac_dev/force-app/main/default/objects/Payment__c/validationRules/xct_OvernightCheckOnly.validationRule-meta.xml
<ValidationRule>
    <fullName>xct_OvernightCheckOnly</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Overnight__c  = true,
TEXT(Payment_Method__c)  &lt;&gt;  &quot;Check&quot;)</errorConditionFormula>
    <errorDisplayField>Overnight__c</errorDisplayField>
    <errorMessage>Overnight is only available for Lease Check Payment Method</errorMessage>
</ValidationRule>