peac_dev/force-app/main/default/objects/Payment__c/listViews/Loan_Payments.listView-meta.xml
<ListView>
    <fullName>Loan_Payments</fullName>
    <columns>NAME</columns>
    <columns>Payee__c</columns>
    <columns>Payment_Status__c</columns>
    <columns>Payment_Released_Date__c</columns>
    <columns>Total__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>Payment__c.Loan_Payment</value>
    </filters>
    <label>Loan Payments</label>
</ListView>