peac_dev/force-app/main/default/objects/Payment__c/listViews/Payment_sent_issues.listView-meta.xml
<ListView>
    <fullName>Payment_sent_issues</fullName>
    <columns>NAME</columns>
    <columns>LAST_UPDATE</columns>
    <columns>Payment_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <filters>
        <field>Payment_Status__c</field>
        <operation>equals</operation>
        <value>Ready to Send</value>
    </filters>
    <label>Payment sent - issues</label>
</ListView>