peac_dev/force-app/main/default/objects/Payment__c/listViews/Subsidy_Info.listView-meta.xml
<ListView>
    <fullName>Subsidy_Info</fullName>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Subsidy_Information__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Subsidy Info</label>
</ListView>